correct some mistakes

--- a/lab1/lab1.html
+++ b/lab1/lab1.html
@@ -60,10 +60,10 @@
                 mov S,D;效果D=S
             </p>
             <p>
-                call指令，将返回结果入栈，并跳转到被调用过程的起始处。
+                call指令，将函数返回地址入栈，并跳转到被调用过程的起始处。push eip
             </p>
             <p>
-                ret指令，从栈中弹出地址，并跳转到这个位置。
+                ret指令，从栈中弹出地址，并跳转到这个位置。pop eip
             </p>
             <p>
                 leave指令，为返回准备栈，等价于这两句代码 movl %ebp,%esp ; popl %ebp.
